# rules_gz

./: .bazelrc  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel
.github/workflows/: ci.yml
gz/: BUILD.bazel  headers.bzl
gz/private/: BUILD.bazel  gz_configure_file.bzl  gz_configure_file.py  gz_export_header.bzl
gz/templates/: BUILD  gz_export_header.tpl.hh
